gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-global_asm.rs
global_asm!(""); // { dg-error ".E0658." "" { target *-*-* } }

fn main() {}

